Prevent scrolling behind Header modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,6 +48,12 @@ body, html {
   overflow: hidden;
 }
 
+.bodyHeaderOpen {
+  @media screen and (max-width: $medium) {
+    overflow: hidden;
+  }
+}
+
 .content {
   margin: 0 auto;
   padding: 0;
